Added swagger UI

--- a/computer-api.csproj
+++ b/computer-api.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>computer_api</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
 </Project>
